sample codesnippet